# Cura

./: .mcp.json  conftest.py  docker-compose.yml  flake.nix
.agentsroom/: agents.json  commands.json  project.json
.github/workflows/: nonplanar-engine.yml
cura/: CuraApplication.py
cura/Settings/: CuraContainerStack.py
cura/UI/: ObjectsModel.py
design/: settings_inheritance_mixins.md
docker/: Dockerfile
docker/cura-config/: cura.cfg
docs/: post-processing-preview-analysis.md  toolpath-generation-report.md  ultimaker-digital-factory-api.md
docs/design/: settings-mixins-plugin.md
plugins/BumpMesh/: BumpMeshTool.py  BumpMeshTool.qml  DisplacementEngine.py  DisplacementJob.py  FaceMask.py  MeshDisplaceOperation.py  MeshSubdivider.py  TextureProjector.py  __init__.py  plugin.json
plugins/ExtendedPaintTool/: DrawingToolButton.qml  ExtendedPaintTool.py  ExtendedPaintTool.qml  ExtendedPaintView.py  ImagePanel.qml  ImageProjection.py  LayerPanel.qml  PaintImageCommand.py  __init__.py  plugin.json
plugins/FEAInfillOptimizer/: BoundaryConditionTool.py  FEABoundaryConditionDecorator.py  FEAInfillExtension.py  __init__.py  plugin.json  vendor_deps.sh
plugins/MixedColorPlugin/: MixedColorPlugin.py  __init__.py  plugin.json
plugins/ModelGroupsPlugin/: AllModelsModel.py  ModelGroupDecorator.py  ModelGroupNodesModel.py  ModelGroupsContextMenu.qml  ModelGroupsManager.py  ModelGroupsModel.py  ModelGroupsPanel.qml  (+4 more)
plugins/NonPlanarSlicing/engine_plugin/host/: Cargo.toml  build.rs
plugins/NonPlanarSlicing/engine_plugin/host/src/: main.rs  wasm_runtime.rs
(+189 files in other folders)
